--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<configuration>
+					<appName>ar-controle-financeiro</appName>
+					<processTypes>
+						<web>java $JAVA_OPTS -jar target/ControleFinanceiro-0.0.1-SNAPSHOT.jar</web>
+					</processTypes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
